fixed image size on mobile

--- a/css/about.css
+++ b/css/about.css
@@ -130,10 +130,11 @@ label.opener {
     }
 
     section .me {
-        margin-left: auto;
         margin-right: auto;
-
-        margin-bottom: 3rem;
+        margin-left: auto;
+        margin-bottom: 5rem;
+        flex-basis: 15rem;
+        height: 20rem;
     }
 
     section .dropdown {
